changer le type du bouton de button à submit

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -24,7 +24,7 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Qu'est-ce qui doit être fait ?"
                         aria-label="Task Input" formControlName="title">
-                    <button class="btn btn-outline-primary" type="button"><i class="bi bi-plus-square"></i> Ajouter une
+                    <button class="btn btn-outline-primary" type="submit"><i class="bi bi-plus-square"></i> Ajouter une
                         tâche</button>
                 </div>
             </form>
