--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -45,6 +45,11 @@
 
             </ul>
 
+            <div *ngIf="isLoading">
+                <div class="spinner-grow text-danger" role="status"></div>
+                <div><span class="sr-only text-danger">Loading...</span></div>
+            </div>
+
 
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center"
